--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <title>Document</title>
     </head>
     <body>
+        <header>Đây là header</header>
+
         <h1>Đây là demo về git</h1>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur
+            recusandae harum sequi officiis eius nam qui. Reprehenderit repellat
+            possimus error ipsam, cupiditate qui porro, accusantium, iste
+            exercitationem sint quibusdam!
+        </p>
     </body>
 </html>
