--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             possimus error ipsam, cupiditate qui porro, accusantium, iste
             exercitationem sint quibusdam!
         </p>
+
+        <p>Lorem, ipsum dolor.</p>
         <footer>Đây là footer!</footer>
     </body>
 </html>
