--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </p>
 
         <p>Lorem, ipsum dolor.</p>
+        <h3>Đây là tiêu đề</h3>
+        <h4>Đây là tiêu đề 2</h4>
         <footer>Đây là footer!</footer>
     </body>
 </html>
